--- a/PDA457B13.opf/meta.yml
+++ b/PDA457B13.opf/meta.yml
@@ -8,3 +8,5 @@ source_metadata:
       title: འཕགས་པ་བྱམས་པ་འཇུག་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།
       total_pages: 872
       volume_number: 61
+vol2fn:
+  v061: v061.txt
