--- a/D4FFDC681.opf/index.yml
+++ b/D4FFDC681.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   4486a0e0c6864931b098e8e3c3374041:
     parts: {}
+    work_id: T0198
     span:
-    - vol: 61
+    - base: b45b
       start: 0
       end: 80598
-    work_id: T0198
